--- a/src/components/CourseInfo/CourseInfo.module.scss
+++ b/src/components/CourseInfo/CourseInfo.module.scss
@@ -8,4 +8,36 @@
     font-size: $default-font-size;
     box-shadow: 0.25rem 0.5rem 0.75rem rgba($color-tertiary-dark-2, 0.75);
     background-color: rgba($color-tertiary-dark-2, 0.2);
+    display: flex;
+
+    h2 {
+        font-size: $small-header-font-size;
+        text-align: center;
+        margin-bottom: 1rem;
+    }
+
+    &__Image {
+        width: 70%;
+
+        img {
+            max-width: 100%;
+            height: 100%;
+        }
+    }
+
+    &__Body {
+        width: 30%;
+        padding-left: 1.5rem;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__Faculty {
+        margin-top: auto;
+
+        ul {
+            padding-left: 3rem;
+            list-style: square;
+        }
+    }
 }
