added more authentication stuff

--- a/src/components/Auth/PasswordReset/PasswordReset.module.scss
+++ b/src/components/Auth/PasswordReset/PasswordReset.module.scss
@@ -1,6 +1,6 @@
 @import "../../../variables";
 
-.RequestPasswordReset {
+.PasswordReset {
     font-size: $default-font-size;
     box-shadow: $shadow-custom;
     border-radius: 4px;
@@ -8,7 +8,7 @@
     width: 40%;
     margin: 20rem auto 0 auto;
     padding: 2rem;
-    background-color: rgba($color-misc-5, 0.4);
+    background-color: rgba($color-misc-2, 0.4);
 
     button {
         margin-top: 1rem;
