more on authentication

--- a/src/components/Auth/RequestPasswordReset/RequestPasswordReset.module.scss
+++ b/src/components/Auth/RequestPasswordReset/RequestPasswordReset.module.scss
@@ -23,4 +23,18 @@
         color: $color-complement-dark-2;
         margin-bottom: 4rem;
     }
+
+    &__Cta {
+        text-align: center;
+    }
+
+    &__Link {
+        margin-top: 2rem;
+        padding: 1rem 1.5rem;
+        display: inline-block;
+        text-decoration: none;
+        font-size: $default-font-size;
+        background-color: rgba($color-complement-dark-2, 0.6);
+        color: $color-white;
+    }
 }
