--- a/src/containers/Course/Course.module.scss
+++ b/src/containers/Course/Course.module.scss
@@ -18,4 +18,11 @@
         color: rgba($color-tertiary-dark-2, 0.85);
         margin-bottom: 2rem;
     }
+
+    &__Loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
