--- a/src/containers/CourseList/CourseList.module.scss
+++ b/src/containers/CourseList/CourseList.module.scss
@@ -17,4 +17,11 @@
         margin: 0 auto;
         display: flex;
     }
+
+    &__Loader {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+    }
 }
