--- a/src/components/CourseMenu/CourseMenu.module.scss
+++ b/src/components/CourseMenu/CourseMenu.module.scss
@@ -9,6 +9,10 @@
 
     &__Misc {
         margin-top: 10%;
+
+        & > *:not(:last-child) {
+            margin-right: 1rem;
+        }
     }
 
     &__Cta {
