--- a/src/components/Questionnaire/Content/Content.module.scss
+++ b/src/components/Questionnaire/Content/Content.module.scss
@@ -1,8 +1,9 @@
 @import "../../../variables";
 
 .Content {
-    margin: 5rem 0;
+    margin: 5rem auto;
     height: calc(100% - 10rem);
+    width: 80%;
 
     &__Cta {
         position: absolute;
