--- a/src/components/UI/SelectInput/SelectInput.module.scss
+++ b/src/components/UI/SelectInput/SelectInput.module.scss
@@ -4,6 +4,7 @@
     display: inline-block;
     position: relative;
     font-size: $default-font-size;
+    align-self: flex-start;
 
     label {
         display: inline-block;
@@ -15,8 +16,8 @@
 
 .SelectInput {
     display: inline-block;
-    width: 5rem;
-    padding: 0.5rem;
+    width: max-content;
+    padding: 0.5rem 2rem 0.5rem 0.5rem;
     border-bottom: 1px solid rgba($color-tertiary-dark-1, 0.5);
     position: relative;
     cursor: pointer;
