started user administration

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -55,8 +55,11 @@ $color-gray-light: #eee;
 $color-grey-light-0: #e0e0e0;
 $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #aaa;
+$color-grey-light-3: #f0ebe1;
 $color-grey-dark-1: #54483A;
 $color-grey-dark-2: #6D5D4B;
+
+$brownish: #957029;
 
 $green: #008744;
 $blue: #0057e7;
