admin panel contd

--- a/src/components/UI/Input/Input.module.scss
+++ b/src/components/UI/Input/Input.module.scss
@@ -64,6 +64,10 @@
     }
 }
 
+// .InputElement[type="password"]:focus ~ #PasswordFeedback {
+//     background-color: orangered;
+// }
+
 .Invalid {
     background-color: rgba($color-primary-light-1, 0.5);
     border-bottom: 3px solid $color-primary;
