--- a/src/components/Admin/Administration.module.scss
+++ b/src/components/Admin/Administration.module.scss
@@ -7,5 +7,10 @@
     grid-template-columns: repeat(5, minmax(min-content, 1fr));
     grid-template-areas: "item1 item2 item2 item2 item2";
     grid-gap: 3px;
-    padding-right: 2rem;
+
+    & > :not(:first-child) {
+        padding: 0 2rem;
+    }
+
+    // padding-right: 2rem;
 }
