--- a/src/components/Admin/UserManagement/AdminUserList/AdminUserList.module.scss
+++ b/src/components/Admin/UserManagement/AdminUserList/AdminUserList.module.scss
@@ -8,7 +8,7 @@
         font-size: $default-header-font-size;
         letter-spacing: 0.3em;
         text-transform: uppercase;
-        padding: 1rem
+        padding: 1rem;
         
         h1 {
             font-weight: 400;
