admin front end contd

--- a/src/components/Admin/CourseManagement/CourseList/CourseCard/CourseCard.module.scss
+++ b/src/components/Admin/CourseManagement/CourseList/CourseCard/CourseCard.module.scss
@@ -39,6 +39,12 @@
         justify-self: center;
         align-self: end;
         z-index: 3;
+        cursor: pointer;
+        transition: background-color 0.2s ease;
+
+        &:hover {
+            background-color: $color-misc-7;
+        }
     }
 
     &__Body {
