Section and subsection creation admin page

--- a/src/components/Admin/Administration.module.scss
+++ b/src/components/Admin/Administration.module.scss
@@ -9,7 +9,7 @@
     grid-gap: 3px;
 
     & > :not(:first-child) {
-        padding: 0 2rem;
+        padding: 0 2rem 2rem 2rem;
     }
 
     // padding-right: 2rem;
