--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -41,6 +41,7 @@ $colors: $color-misc-1, $color-misc-3, $color-misc-6;
 $colors-active: $color-misc-2, $color-misc-4, $color-misc-5;
 
 // Variables
+$small-font-size: 1.4rem;
 $default-font-size: 1.6rem;
 $medium-font-size: 2.4rem;
 $header-font-size: 3rem;
@@ -50,6 +51,7 @@ $fancy-font: 'Fredoka One', cursive;
 // Misc colors
 $color-white: #fff;
 $color-black: #000;
+$color-grey-dark: #777;
 $color-gray-dark:#4b4b4b;
 $color-gray-light: #eee;
 $color-grey-light-0: #e0e0e0;
