--- a/src/components/CourseNavigation/CourseNavigation.module.scss
+++ b/src/components/CourseNavigation/CourseNavigation.module.scss
@@ -1,10 +1,10 @@
 @import "../../variables";
 
 .CourseNavigation {
-    width: 80%;
+    // width: 80%;
     height: 5rem;
     margin: 0 auto 2rem auto;
-    box-shadow: 0.2rem 0.4rem 0.6rem rgba($color-tertiary-dark-2, 0.75);
+    box-shadow: 1px 2px 3px rgba($color-tertiary-dark-2, 0.75);
     background-color: rgba($color-tertiary-dark-2, 0.2);
     display: flex;
     align-items: center;
