--- a/src/components/CourseSection/CourseSection.module.scss
+++ b/src/components/CourseSection/CourseSection.module.scss
@@ -5,10 +5,16 @@
     width: 100%;
     height: 100%;
 
-    &__Container {
+    &__Content {
         height: 100%;
         width: 80%;
         margin: 0 auto;
+    }
+
+    &__Container {
+        height: 100%;
+        // width: 80%;
+        // margin: 0 auto;
         display: flex;
         flex-direction: column;
     }
