--- a/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItem/NavigationItem.module.scss
@@ -11,9 +11,9 @@
 }
 
 .Link {
-    padding: 0.75rem 1.5rem;
+    padding: 0.5rem 1rem;
     text-decoration: none;
-    color: $color-white;
+    color: rgba($color-grey-dark, 0.85);
     
     &:hover {
         color: $color-complement-light-1;
