--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -73,15 +73,19 @@ $gray: #ccc;
 $gray-dark: #aaa;
 
 // SHADOWS
+$shadow-mild: 1px 2px 3px rgba($gray, 0.5);
 $shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 $shadow-custom: 0 0 3rem rgba(0, 0, 0, 0.1);
 $shadow-custom-2: 0 0 1rem rgba(0, 0, 0, 0.2);
 
 // FONT SIZE
+$small-font-size: 1.2rem;
+$small-font-size-2: 1.4rem;
 $default-font-size: 1.6rem;
 $small-header-font-size: 2rem;
 $default-header-font-size: 2.5rem;
+$bigger-header-font-size: 3.5rem;
 
 // Breakpoints
 $bp-largest: 75em; // 1200px / 16px = 75em
