--- a/src/components/Admin/AdminNavigation/AdminNavigation.module.scss
+++ b/src/components/Admin/AdminNavigation/AdminNavigation.module.scss
@@ -1,12 +1,11 @@
 @import "../../../variables";
 
 .AdminNavigation {
-    padding: 2rem 0 0 2rem;
     grid-area: item1;
     display: flex;
     flex-direction: column;
     font-size: $default-font-size;
-    background-image: linear-gradient(to bottom right, $color-tertiary 0%, $color-tertiary 50%, $color-white);
+    box-shadow: $shadow-mild;
 
     // TODO: Move it to the component later
     & > div:not(:last-child) {
@@ -14,8 +13,6 @@
     }
 
     &__Item {
-        
-
         header {
             font-weight: 700;
             cursor: pointer;
