--- a/src/components/Admin/CourseManagement/CourseList/CourseCard/CourseCard.module.scss
+++ b/src/components/Admin/CourseManagement/CourseList/CourseCard/CourseCard.module.scss
@@ -26,9 +26,9 @@
 
     &__Name {
         background-color: $color-primary-light-2;
-        font-size: $default-font-size;
+        font-size: $small-font-size-2;
         text-align: center;
-        font-weight: 400;
+        font-weight: 600;
         color: #fff;
         padding: 1.25rem;
         width: 80%;
@@ -55,19 +55,19 @@
         list-style: none;
 
         h5 {
-            font-size: $small-header-font-size;
+            font-size: $default-font-size;
             display: flex;
             align-content: center;
             margin-bottom: 1rem;
         }
 
         ul {
-            font-size: $default-font-size;
+            font-size: 1.4rem;
         }
 
         &__Icon {
-            width: 2.5rem;
-            height: 2.5rem;
+            width: 2rem;
+            height: 2rem;
             margin-right: 0.5rem;
             fill: $color-black;
         }
@@ -86,6 +86,10 @@
 
         & > button:not(:last-child) {
             margin-right: 1rem;
+        }
+
+        button {
+            font-size: $small-font-size-2;
         }
     }
 }
