--- a/src/components/Admin/CourseManagement/CourseEnrollment/CourseEnrollment.module.scss
+++ b/src/components/Admin/CourseManagement/CourseEnrollment/CourseEnrollment.module.scss
@@ -34,4 +34,12 @@
             }
         }
     }
+
+    &__Cta {
+        margin-top: 2rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
 }
