edit account started

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -53,7 +53,7 @@ $color-white: #fff;
 $color-black: #000;
 $color-grey-dark: #777;
 $color-gray-dark:#4b4b4b;
-$color-gray-light: #eee;
+$color-gray-light: #eeeeee;
 $color-grey-light-0: #e0e0e0;
 $color-grey-light-1: #f9f7f6;
 $color-grey-light-2: #aaa;
@@ -78,6 +78,7 @@ $shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 $shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
 $shadow-custom: 0 0 3rem rgba(0, 0, 0, 0.1);
 $shadow-custom-2: 0 0 1rem rgba(0, 0, 0, 0.2);
+$shadow-custom-3: 0 0 0.5rem rgba(0, 0, 0, 0.2);
 
 // FONT SIZE
 $small-font-size: 1.2rem;
