--- a/src/components/FeedbackDialogue/FeedbackDialogue.module.scss
+++ b/src/components/FeedbackDialogue/FeedbackDialogue.module.scss
@@ -1,6 +1,6 @@
 @import "../../variables";
 
-.ErrorDialogueContainer {
+.FeedbackDialogueContainer {
     position: fixed;
     top: 0;
     left: 0;
@@ -10,7 +10,7 @@
     z-index: 1200;
 }
 
-.ErrorDialogue {
+.FeedbackDialogue {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -24,12 +24,9 @@
     background-color: $color-white;
     box-shadow: 0.5rem 1rem 1rem rgba($color-black, 0.2);
     padding: 1rem 1.5rem;
-}
 
-.ErrorDialogueCallToAction {
-    button {
+    &__Button {
         all: unset;
-        background-color: $color-primary-dark-2;
         color: $color-white;
         padding: 0.5rem 1rem;
         cursor: pointer;
@@ -39,5 +36,13 @@
         &:hover {
             background-color: $color-gray-dark;
         }
+    }
+
+    &__Button__Success {
+        background-color: $color-secondary-dark-2;
+    }
+
+    &__Button__Error {
+        background-color: $color-primary-dark-2;
     }
 }
