--- a/src/components/CourseForum/PostList/PostDetail/PostCommentList/PostComment/PostComment.module.scss
+++ b/src/components/CourseForum/PostList/PostDetail/PostCommentList/PostComment/PostComment.module.scss
@@ -11,12 +11,13 @@
     flex-direction: column;
     text-align: left;
 
-    &__Header {
+    &__Footer {
+        margin-top: 2rem;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding-bottom: 5px;
-        border-bottom: 1px solid rgba($color-black, 0.3);
+        padding-top: 5px;
+        border-top: 1px solid rgba($color-black, 0.3);
     }
 
     &__Content {
