added an inbox navigation menu

--- a/src/components/Navigation/NavigationItems/NavigationItems.module.scss
+++ b/src/components/Navigation/NavigationItems/NavigationItems.module.scss
@@ -16,5 +16,8 @@
 
     &__Auth {
         margin-left: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 }
