in-app chat started

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -27,6 +27,11 @@ $color-complement-dark-1: #C27100;
 $color-complement-dark-2: #734300;
 $color-complement-dark-3: #523002;
 
+$color-chat: #d56f7e;
+$color-chat-darkish: #be5d6b;
+$color-chat-dark: #b93649;
+$color-chat-dark-1: #bb2650;
+
 $color-misc-1: #ff5781;
 $color-misc-2: #ba265d;
 
