--- a/src/components/Navigation/UserMessage/MessagesList/MessageListItem/MessageListItem.module.scss
+++ b/src/components/Navigation/UserMessage/MessagesList/MessageListItem/MessageListItem.module.scss
@@ -6,6 +6,7 @@
     display: flex;
     align-items: center;
     padding: 0 5px;
+    position: relative;
 
     &:last-child {
         margin-bottom: 0;
@@ -41,5 +42,20 @@
 
     &__Time {
         margin-left: auto;
+    }
+
+    &__UnreadCount {
+        position: absolute;
+        top:  50%;
+        right: 20%;
+        transform: translateY(-50%);
+        width: 2rem;
+        height: 2rem;
+        text-align: center;
+        color: $color-black;
+        background-color: $color-complement;
+        border-radius: 50%;
+        line-height: 1.5;
+        font-weight: 700;
     }
 }
