messaging system continued

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -31,6 +31,7 @@ $color-chat: #d56f7e;
 $color-chat-darkish: #be5d6b;
 $color-chat-dark: #b93649;
 $color-chat-dark-1: #bb2650;
+$color-notice: #FFBE61;
 
 $color-misc-1: #ff5781;
 $color-misc-2: #ba265d;
