message system finished

--- a/src/components/Chat/Sidebar/UserItem/UserItem.module.scss
+++ b/src/components/Chat/Sidebar/UserItem/UserItem.module.scss
@@ -58,4 +58,8 @@
         line-height: 1.5;
         font-weight: 700;
     }
+
+    &__Selected {
+        background-color: $color-chat-darkish;
+    }
 }
