--- a/src/components/Navigation/UserMessage/MessagesList/MessageListItem/MessageListItem.module.scss
+++ b/src/components/Navigation/UserMessage/MessagesList/MessageListItem/MessageListItem.module.scss
@@ -7,6 +7,12 @@
     align-items: center;
     padding: 0 5px;
     position: relative;
+    cursor: pointer;
+    transition: background-color 0.2s ease-in;
+
+    &:hover {
+        background-color: $color-grey-light-0;
+    }
 
     &:last-child {
         margin-bottom: 0;
