minor tweaks to chat component

--- a/src/components/Navigation/UserMessage/MessagesList/MessagesList.module.scss
+++ b/src/components/Navigation/UserMessage/MessagesList/MessagesList.module.scss
@@ -4,6 +4,6 @@
     list-style: none;
     padding: 5px 0;
     height: 19rem;
-    overflow-y: scroll;
+    overflow-y: auto;
     scrollbar-width: thin;
 }
